Add elegant career path timeline component with interactive job listings

--- a/src/pages/Option3.css
+++ b/src/pages/Option3.css
@@ -1,5 +1,16 @@
 .option3-page {
   min-height: 100vh;
+  background-color: var(--color-white);
+}
+
+.option3-page > section:first-of-type {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.option3-page > section {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .option3-page .container {
