--- a/src/components/ValuesSection.css
+++ b/src/components/ValuesSection.css
@@ -5,6 +5,7 @@
 .values-section {
   background-color: var(--color-white);
   padding: var(--spacing-4xl) 0;
+  margin-top: 8rem;
 }
 
 .values-header {
