--- a/src/components/PathSelector.css
+++ b/src/components/PathSelector.css
@@ -3,8 +3,8 @@
    ============================================ */
 
 .path-selector {
-  background-color: var(--color-white);
-  padding: var(--spacing-4xl) 0;
+  background-color: #f9fafb;
+  padding: var(--spacing-2xl) 0;
 }
 
 .path-selector-header {
