--- a/src/components/ValuesSection.css
+++ b/src/components/ValuesSection.css
@@ -4,8 +4,8 @@
 
 .values-section {
   background-color: var(--color-white);
-  padding: var(--spacing-4xl) 0;
-  margin-top: 8rem;
+  padding: var(--spacing-2xl) 0;
+  margin-top: 0;
 }
 
 .values-header {
